native/include/sogen_dart.h

typedef struct sogen_dart_app sogen_dart_app;
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_read_register(
    sogen_dart_app *app, int32_t reg, uint64_t *value);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_write_register(
    sogen_dart_app *app, int32_t reg, uint64_t value);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_get_executed_instructions(
    sogen_dart_app *app, uint64_t *value);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_get_backend_name(
    sogen_dart_app *app, sogen_dart_buffer *out_buffer);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_get_emulation_root(
    sogen_dart_app *app, sogen_dart_buffer *out_buffer);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_linux_get_last_stop_reason(sogen_dart_app *app, int32_t *value);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_get_last_stop_detail(
    sogen_dart_app *app, sogen_dart_buffer *out_buffer);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_activate_thread(
    sogen_dart_app *app, uint32_t tid, int32_t *activated);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_linux_perform_thread_switch(sogen_dart_app *app, int32_t *switched);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_linux_yield_thread(sogen_dart_app *app);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_get_process_info(
    sogen_dart_app *app, sogen_dart_linux_process_info *info);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_get_current_thread_info(
    sogen_dart_app *app, int32_t *has_value,
    sogen_dart_linux_thread_info *info);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_get_thread_info(
    sogen_dart_app *app, uint32_t tid, int32_t *has_value,
    sogen_dart_linux_thread_info *info);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_linux_get_active_thread_info(sogen_dart_app *app, int32_t *has_value,
                                        sogen_dart_linux_thread_info *info);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_get_threads(
    sogen_dart_app *app, sogen_dart_linux_thread_list *threads);
SOGEN_DART_EXPORT void
sogen_dart_linux_thread_list_free(sogen_dart_linux_thread_list *threads);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_linux_memory_allocate(
    sogen_dart_app *app, size_t size, int32_t permissions, uint64_t start,
    uint64_t *address);