native/include/generated/sogen_dart_generated.h

typedef int32_t sogen_dart_status;
typedef struct sogen_dart_buffer {
  uint8_t *data;
  size_t length;
} sogen_dart_buffer;
typedef struct sogen_dart_linux_process_info {
  int32_t has_exit_status;
  int32_t exit_status;
  uint32_t pid;
  uint32_t ppid;
  uint32_t uid;
  uint32_t gid;
  uint32_t euid;
  uint32_t egid;
  uint64_t thread_count;
  int32_t has_active_thread;
  uint32_t active_thread_id;
} sogen_dart_linux_process_info;
typedef struct sogen_dart_linux_thread_info {
  uint32_t tid;
  uint64_t stack_base;
  uint64_t stack_size;
  uint64_t fs_base;
  uint64_t current_ip;
  uint64_t start_address;
  int32_t wait_state;
  int32_t setup_done;
  int32_t terminated;
  int32_t exit_code;
  uint64_t executed_instructions;
} sogen_dart_linux_thread_info;
typedef struct sogen_dart_linux_thread_list {
  sogen_dart_linux_thread_info *data;
  size_t length;
} sogen_dart_linux_thread_list;