lib/src/ffi/sogen_native_bindings.g.dart


  late final _sogen_dart_linux_read_registerPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Int32,
            ffi.Pointer<ffi.Uint64>,
          )
        >
      >('sogen_dart_linux_read_register');
  late final _sogen_dart_linux_read_register =
      _sogen_dart_linux_read_registerPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              ffi.Pointer<ffi.Uint64>,
            )
          >();

  int sogen_dart_linux_write_register(
    ffi.Pointer<sogen_dart_app> app,
    int reg,
    int value,
  ) {
    return _sogen_dart_linux_write_register(app, reg, value);
  }

  late final _sogen_dart_linux_write_registerPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Int32,
            ffi.Uint64,
          )
        >
      >('sogen_dart_linux_write_register');
  late final _sogen_dart_linux_write_register =
      _sogen_dart_linux_write_registerPtr
          .asFunction<int Function(ffi.Pointer<sogen_dart_app>, int, int)>();

  int sogen_dart_linux_get_executed_instructions(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<ffi.Uint64> value,
  ) {
    return _sogen_dart_linux_get_executed_instructions(app, value);
  }

  late final _sogen_dart_linux_get_executed_instructionsPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<ffi.Uint64>,
          )
        >
      >('sogen_dart_linux_get_executed_instructions');
  late final _sogen_dart_linux_get_executed_instructions =
      _sogen_dart_linux_get_executed_instructionsPtr
          .asFunction<
            int Function(ffi.Pointer<sogen_dart_app>, ffi.Pointer<ffi.Uint64>)
          >();

  int sogen_dart_linux_get_backend_name(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_buffer> out_buffer,
  ) {
    return _sogen_dart_linux_get_backend_name(app, out_buffer);
  }

  late final _sogen_dart_linux_get_backend_namePtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_buffer>,
          )
        >
      >('sogen_dart_linux_get_backend_name');
  late final _sogen_dart_linux_get_backend_name =
      _sogen_dart_linux_get_backend_namePtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<sogen_dart_buffer>,
            )
          >();

  int sogen_dart_linux_get_emulation_root(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_buffer> out_buffer,
  ) {
    return _sogen_dart_linux_get_emulation_root(app, out_buffer);
  }

  late final _sogen_dart_linux_get_emulation_rootPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_buffer>,
          )
        >
      >('sogen_dart_linux_get_emulation_root');
  late final _sogen_dart_linux_get_emulation_root =
      _sogen_dart_linux_get_emulation_rootPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<sogen_dart_buffer>,
            )
          >();

  int sogen_dart_linux_get_last_stop_reason(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<ffi.Int32> value,
  ) {
    return _sogen_dart_linux_get_last_stop_reason(app, value);
  }

  late final _sogen_dart_linux_get_last_stop_reasonPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('sogen_dart_linux_get_last_stop_reason');
  late final _sogen_dart_linux_get_last_stop_reason =
      _sogen_dart_linux_get_last_stop_reasonPtr
          .asFunction<
            int Function(ffi.Pointer<sogen_dart_app>, ffi.Pointer<ffi.Int32>)
          >();

  int sogen_dart_linux_get_last_stop_detail(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_buffer> out_buffer,
  ) {
    return _sogen_dart_linux_get_last_stop_detail(app, out_buffer);
  }

  late final _sogen_dart_linux_get_last_stop_detailPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_buffer>,
          )
        >
      >('sogen_dart_linux_get_last_stop_detail');
  late final _sogen_dart_linux_get_last_stop_detail =
      _sogen_dart_linux_get_last_stop_detailPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<sogen_dart_buffer>,
            )
          >();

  int sogen_dart_linux_activate_thread(
    ffi.Pointer<sogen_dart_app> app,
    int tid,
    ffi.Pointer<ffi.Int32> activated,
  ) {
    return _sogen_dart_linux_activate_thread(app, tid, activated);
  }

  late final _sogen_dart_linux_activate_threadPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint32,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('sogen_dart_linux_activate_thread');
  late final _sogen_dart_linux_activate_thread =
      _sogen_dart_linux_activate_threadPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              ffi.Pointer<ffi.Int32>,
            )
          >();

  int sogen_dart_linux_perform_thread_switch(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<ffi.Int32> switched,
  ) {
    return _sogen_dart_linux_perform_thread_switch(app, switched);
  }

  late final _sogen_dart_linux_perform_thread_switchPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('sogen_dart_linux_perform_thread_switch');
  late final _sogen_dart_linux_perform_thread_switch =
      _sogen_dart_linux_perform_thread_switchPtr
          .asFunction<
            int Function(ffi.Pointer<sogen_dart_app>, ffi.Pointer<ffi.Int32>)
          >();

  int sogen_dart_linux_yield_thread(ffi.Pointer<sogen_dart_app> app) {
    return _sogen_dart_linux_yield_thread(app);
  }

  late final _sogen_dart_linux_yield_threadPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(ffi.Pointer<sogen_dart_app>)
        >
      >('sogen_dart_linux_yield_thread');
  late final _sogen_dart_linux_yield_thread = _sogen_dart_linux_yield_threadPtr
      .asFunction<int Function(ffi.Pointer<sogen_dart_app>)>();

  int sogen_dart_linux_get_process_info(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_linux_process_info> info,
  ) {
    return _sogen_dart_linux_get_process_info(app, info);
  }

  late final _sogen_dart_linux_get_process_infoPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_linux_process_info>,
          )
        >
      >('sogen_dart_linux_get_process_info');
  late final _sogen_dart_linux_get_process_info =
      _sogen_dart_linux_get_process_infoPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<sogen_dart_linux_process_info>,
            )
          >();

  int sogen_dart_linux_get_current_thread_info(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<ffi.Int32> has_value,
    ffi.Pointer<sogen_dart_linux_thread_info> info,
  ) {
    return _sogen_dart_linux_get_current_thread_info(app, has_value, info);
  }

  late final _sogen_dart_linux_get_current_thread_infoPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<sogen_dart_linux_thread_info>,
          )
        >
      >('sogen_dart_linux_get_current_thread_info');
  late final _sogen_dart_linux_get_current_thread_info =
      _sogen_dart_linux_get_current_thread_infoPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<sogen_dart_linux_thread_info>,
            )
          >();

  int sogen_dart_linux_get_thread_info(
    ffi.Pointer<sogen_dart_app> app,
    int tid,
    ffi.Pointer<ffi.Int32> hasValue,
    ffi.Pointer<sogen_dart_linux_thread_info> info,
  ) => _sogen_dart_linux_get_thread_info(app, tid, hasValue, info);

  late final _sogen_dart_linux_get_thread_infoPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint32,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<sogen_dart_linux_thread_info>,
          )
        >
      >('sogen_dart_linux_get_thread_info');
  late final _sogen_dart_linux_get_thread_info =
      _sogen_dart_linux_get_thread_infoPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<sogen_dart_linux_thread_info>,
            )
          >();

  int sogen_dart_linux_get_active_thread_info(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<ffi.Int32> hasValue,
    ffi.Pointer<sogen_dart_linux_thread_info> info,
  ) => _sogen_dart_linux_get_active_thread_info(app, hasValue, info);

  late final _sogen_dart_linux_get_active_thread_infoPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<sogen_dart_linux_thread_info>,
          )
        >
      >('sogen_dart_linux_get_active_thread_info');
  late final _sogen_dart_linux_get_active_thread_info =
      _sogen_dart_linux_get_active_thread_infoPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<sogen_dart_linux_thread_info>,
            )
          >();

  int sogen_dart_linux_get_threads(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_linux_thread_list> threads,
  ) => _sogen_dart_linux_get_threads(app, threads);

  late final _sogen_dart_linux_get_threadsPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_linux_thread_list>,
          )
        >
      >('sogen_dart_linux_get_threads');
  late final _sogen_dart_linux_get_threads = _sogen_dart_linux_get_threadsPtr
      .asFunction<
        int Function(
          ffi.Pointer<sogen_dart_app>,
          ffi.Pointer<sogen_dart_linux_thread_list>,
        )
      >();

  void sogen_dart_linux_thread_list_free(
    ffi.Pointer<sogen_dart_linux_thread_list> threads,
  ) => _sogen_dart_linux_thread_list_free(threads);

  late final _sogen_dart_linux_thread_list_freePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<sogen_dart_linux_thread_list>)
        >
      >('sogen_dart_linux_thread_list_free');
  late final _sogen_dart_linux_thread_list_free =
      _sogen_dart_linux_thread_list_freePtr
          .asFunction<
            void Function(ffi.Pointer<sogen_dart_linux_thread_list>)
          >();

  int sogen_dart_linux_memory_allocate(
    ffi.Pointer<sogen_dart_app> app,
    int size,
    int permissions,
    int start,
    ffi.Pointer<ffi.Uint64> address,
  ) {
    return _sogen_dart_linux_memory_allocate(
      app,
      size,
      permissions,
      start,
      address,
    );
  }
